DTS-46286: optimized imports